--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.0",
     "@types/react-router": "^5.1.16",
+    "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
