--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "packageManager": "yarn@3.2.0",
   "scripts": {
-    "start": "concurrently \"cd frontend && yarn start\" \"cd backend && yarn start\""
+    "start": "concurrently \"cd frontend && yarn start\" \"cd backend && yarn start\"",
+    "install:all": "yarn install && cd frontend && yarn install && cd ../backend && yarn install"
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
