--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,9 @@
     "start": "nodemon ./index.ts"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "@types/morgan": "^1.9.3",
+    "express": "^4.17.3",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
