--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,3 +1,4 @@
+# Yarn
 node_modules
 .yarn/*
 !.yarn/cache
@@ -6,3 +7,6 @@ node_modules
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# Environment
+.env
