--- a/backend/package.json
+++ b/backend/package.json
@@ -8,16 +8,16 @@
     "start": "nodemon ./index.ts"
   },
   "dependencies": {
-    "@types/morgan": "^1.9.3",
-    "cors": "^2.8.5",
-    "express": "^4.17.3",
-    "joi": "^17.6.0",
-    "morgan": "^1.10.0"
+    "cors": "2.8.5",
+    "express": "4.17.3",
+    "joi": "17.6.0",
+    "morgan": "1.10.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.2"
+    "@types/cors": "2.8.12",
+    "@types/express": "4.17.13",
+    "@types/morgan": "1.9.3",
+    "ts-node": "10.7.0",
+    "typescript": "4.6.3"
   }
 }
