--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,25 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.19",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router": "^5.1.16",
-    "@types/react-router-dom": "^5.1.8",
-    "axios": "^0.21.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.1",
+    "@material-ui/core": "4.12.3",
+    "@material-ui/icons": "4.11.2",
+    "axios": "0.26.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-router": "6.2.2",
+    "react-router-dom": "6.2.2",
     "react-scripts": "4.0.3",
-    "typescript": "^4.6.2",
-    "web-vitals": "^1.0.1"
+    "typescript": "4.6.3",
+    "web-vitals": "2.1.4",
+    "@testing-library/jest-dom": "5.16.3",
+    "@testing-library/react": "12.1.4",
+    "@testing-library/user-event": "13.5.0"
+  },
+  "devDependencies": {
+    "@types/jest": "27.4.1",
+    "@types/node": "17.0.23",
+    "@types/react": "17.0.43",
+    "@types/react-dom": "17.0.14",
+    "@types/react-router": "5.1.18",
+    "@types/react-router-dom": "5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
