--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "install:all": "yarn install && cd frontend && yarn install && cd ../backend && yarn install"
   },
   "devDependencies": {
-    "concurrently": "^7.0.0",
-    "typescript": "^4.6.2"
+    "concurrently": "7.0.0",
+    "typescript": "4.6.3"
   },
   "dependencies": {
-    "dotenv": "^16.0.0"
+    "dotenv": "16.0.0"
   }
 }
