--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,17 +5,17 @@
   "dependencies": {
     "@material-ui/core": "4.12.3",
     "@material-ui/icons": "4.11.2",
+    "@testing-library/jest-dom": "5.16.3",
+    "@testing-library/react": "12.1.4",
+    "@testing-library/user-event": "13.5.0",
     "axios": "0.26.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-router": "6.2.2",
-    "react-router-dom": "6.2.2",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.1",
     "react-scripts": "4.0.3",
     "typescript": "4.6.3",
-    "web-vitals": "2.1.4",
-    "@testing-library/jest-dom": "5.16.3",
-    "@testing-library/react": "12.1.4",
-    "@testing-library/user-event": "13.5.0"
+    "web-vitals": "2.1.4"
   },
   "devDependencies": {
     "@types/jest": "27.4.1",
