--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,12 @@
     "start": "nodemon ./index.ts"
   },
   "dependencies": {
+    "colors": "1.4.0",
     "cors": "2.8.5",
+    "dotenv": "16.0.0",
     "express": "4.17.3",
     "joi": "17.6.0",
+    "mongodb": "4.4.1",
     "morgan": "1.10.0"
   },
   "devDependencies": {
