--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "nodemailer": "6.7.3",
     "nodemon": "2.0.15",
     "qrcode": "1.5.0",
-    "speakeasy": "2.0.0"
+    "speakeasy": "2.0.0",
+    "winston": "3.6.0"
   },
   "devDependencies": {
     "@types/cors": "2.8.12",
