--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "start": "tsc --build && node ./build/index.js"
   },
   "dependencies": {
+    "chalk": "5.0.1",
     "colors": "1.4.0",
     "cors": "2.8.5",
     "dotenv": "16.0.0",
