--- a/backend/example.env
+++ b/backend/example.env
@@ -1,8 +1,15 @@
+# GENERAL
 DB_NAME=cloudpass
 DB_URI=mongodb://localhost:27017
 MODE=dev
+
+# MAIL
 MAIL_USER=email@gmail.com
 CLIENT_ID=
 CLIENT_SECRET=
 CLIENT_REFRESH_TOKEN=
 CLIENT_REDIRECT_URL=https://developers.google.com/oauthplayground
+
+# LOGS
+LOG_FOLDER_PATH=logs/
+LOG_FILE_MAX_SIZE=10485760
