--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cloudpasswordmanager-server",
+  "name": "cpass-server",
   "main": "index.ts",
   "packageManager": "yarn@3.2.0",
   "license": "GPL-3.0",
