--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "license": "GPL-3.0",
   "private": true,
   "scripts": {
-    "dev": "tsc --watch & nodemon ./build/index.js",
+    "dev": "concurrently --kill-others \"tsc --build --watch\" \"nodemon ./build/index.js\"",
     "start": "tsc --build && node ./build/index.js"
   },
   "dependencies": {
@@ -30,6 +30,7 @@
     "@types/express": "4.17.13",
     "@types/morgan": "1.9.3",
     "@types/nodemailer": "6.4.4",
+    "concurrently": "7.0.0",
     "typescript": "4.6.3"
   }
 }
