--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "chalk": "4.1.2",
     "colors": "1.4.0",
     "cors": "2.8.5",
+    "date-fns": "2.28.0",
     "dotenv": "16.0.0",
     "express": "4.17.3",
     "google-auth-library": "7.14.1",
