--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "license": "GPL-3.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently --kill-others \"tsc --build --watch\" \"nodemon ./build/index.js\"",
+    "dev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./build/index.js\"",
     "start": "tsc --build && node ./build/index.js"
   },
   "dependencies": {
@@ -22,8 +22,11 @@
     "morgan": "1.10.0",
     "nodemailer": "6.7.3",
     "nodemon": "2.0.15",
+    "object-hash": "3.0.0",
     "qrcode": "1.5.0",
     "speakeasy": "2.0.0",
+    "ts-node": "10.7.0",
+    "tsc-watch": "4.6.2",
     "winston": "3.6.0"
   },
   "devDependencies": {
