--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,10 +23,12 @@
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
     "@types/react-router": "5.1.18",
-    "@types/react-router-dom": "5.3.3"
+    "@types/react-router-dom": "5.3.3",
+    "serve": "13.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "yarn build && cd build && yarn serve -s ./ -p 5000",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
