--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,12 @@
   "license": "GPL-3.0",
   "private": true,
   "scripts": {
-    "dev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./build/index.js\"",
-    "start": "tsc --build && node ./build/index.js"
+    "lint": "yarn run eslint .eslintrc.js \"./**/*.{ts,js}\"",
+    "build": "tsc --build --clean && tsc --build",
+    "start-build": "node ./build/index.js",
+    "lint-and-start": "concurrently \"yarn run lint\" \"yarn run start-build\"",
+    "dev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"yarn run lint-and-start\"",
+    "start": "yarn build && yarn start-build"
   },
   "dependencies": {
     "chalk": "4.1.2",
@@ -34,7 +38,10 @@
     "@types/express": "4.17.13",
     "@types/morgan": "1.9.3",
     "@types/nodemailer": "6.4.4",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
     "concurrently": "7.0.0",
+    "eslint": "8.12.0",
     "typescript": "4.6.3"
   }
 }
