--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "license": "GPL-3.0",
   "private": true,
   "scripts": {
-    "lint": "yarn run eslint .eslintrc.js \"./**/*.{ts,js}\"",
+    "lint": "yarn run eslint \"./**/*.{ts,js}\"",
     "build": "tsc --build --clean && tsc --build",
     "start-build": "node ./build/index.js",
     "lint-and-start": "concurrently \"yarn run lint\" \"yarn run start-build\"",
