--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,10 @@
     "build": "yarn run gulp build",
     "lint": "yarn run eslint \"./**/*.{ts,js}\"",
     "start": "node ./build/index.js",
-    "dev": "concurrently --kill-others \"yarn run watch\" \"nodemon ./build/index.js\""
+    "dev": "concurrently --kill-others \"yarn run build && yarn run watch\" \"nodemon ./build/index.js\""
   },
   "dependencies": {
+    "bcrypt": "5.0.1",
     "chalk": "4.1.2",
     "cors": "2.8.5",
     "date-fns": "2.28.0",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@dabh/eslint-config-populist": "5.0.0",
     "@hapi/eslint-plugin": "5.1.0",
+    "@types/bcrypt": "5.0.0",
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
     "@types/gulp": "4.0.9",
