--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,11 @@
     "date-fns": "2.28.0",
     "dotenv": "16.0.0",
     "express": "4.17.3",
+    "express-jwt": "6.1.1",
     "google-auth-library": "7.14.1",
     "googleapis": "99.0.0",
     "joi": "17.6.0",
+    "jsonwebtoken": "8.5.1",
     "mongodb": "4.4.1",
     "morgan": "1.10.0",
     "nodemailer": "6.7.3",
