--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
     "@types/gulp": "4.0.9",
+    "@types/jsonwebtoken": "8.5.8",
     "@types/morgan": "1.9.3",
     "@types/nodemailer": "6.4.4",
     "@typescript-eslint/eslint-plugin": "latest",
