--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "@types/bcrypt": "5.0.0",
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
+    "@types/express-jwt": "6.0.4",
     "@types/gulp": "4.0.9",
     "@types/jsonwebtoken": "8.5.8",
     "@types/morgan": "1.9.3",
