--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-router": "5.2.0",
     "react-router-dom": "5.2.1",
     "react-scripts": "4.0.3",
+    "scrypt-js": "3.0.1",
     "typescript": "4.6.3",
     "web-vitals": "2.1.4"
   },
