--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -5,12 +5,12 @@
 
 # Yarn
 .pnp.*
-.yarn/
-*.yarn/patches
-*.yarn/plugins
-*.yarn/releases
-*.yarn/sdks
-*.yarn/versions
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 # dependencies
 /node_modules
